Setup partial header, basic devise views and extra paras for signup sanitizer

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -13,6 +13,7 @@
 
   <body>
     <main class="min-h-screen w-screen">
+      <%= render "shared/nav_menu_header", title: @title, home: @home, msg: @msg || '' %>
       <%= yield %>
     </main>
   </body>
