Implement groups controller

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,6 @@
-<div>
-  <h1 class="font-bold text-4xl">Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
+<div class="w-full h-screen bg-project-blue flex flex-col justify-center items-center text-white">
+  <a href="/home">
+    <h1 class="text-5xl w-full text-center font-bold mb-4">Budget App</h1>
+    <h2 class="text-2xl w-full text-center font-light">By lordksix</h2>
+  </a>
 </div>
