Implement login and rsign up page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <main class="min-h-screen w-screen">
+    <main class="w-screen min-h-screen bg-project-text/5">
       <%= yield %>
     </main>
   </body>
