--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,23 @@
-<%= render "shared/nav_menu_header", title: 'Register', home: false, msg: '' %>
-<div class="flex flex-col justify-items-center w-full max-w-3xl gap-6 mx-auto align-center">
+<div class="w-full">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class= 'flex flex-col w-full gap-6 px-4 py-2 mx-auto border-2 border-black max-w3xl justify-items-center align-center'>
-      <h1 class="text-center">Sign up</h1>
-      <%= render "devise/shared/error_messages", resource: resource %>
-
-      <div class="m-auto field">
-        <%= f.text_field :name, autofocus: true, require:true, autocomplete: "text", placeholder: "Full name" %>
+    <%= render "shared/nav_menu_header", title: 'REGISTER', home: false, msg: 'Register', form: f  %>
+    <div class= 'w-full max-w-lg mx-auto mt-6 mb-4'>
+      <div class="w-full max-w-lg mx-auto">
+        <%= f.text_field :name, autofocus: true, autocomplete: "text", placeholder: "Full name", class: "w-full" %>
+      </div>
+      <div class="w-full max-w-lg mx-auto">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "w-full" %>
+      </div>
+      <div class="w-full max-w-lg mx-auto">
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "w-full"  %>
       </div>
 
-      <div class="m-auto field">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
+      <div class="w-full max-w-lg mx-auto">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm password", class: "w-full"  %>
       </div>
 
-      <div class="m-auto field">
-        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password" %>
-      </div>
-
-      <div class="m-auto field">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm password" %>
-      </div>
-
-      <div class="self-start px-4 py-2 m-auto border-2 border-black actions">
-        <%= f.submit "Sign up" %>
-      </div>
     </div>
-
   <% end %>
 
-  <%= render "devise/shared/links" %>
 </div>
+
