--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,13 @@
-<div>
-  <h1 class="font-bold text-4xl">Groups#index</h1>
-  <p>Find me in app/views/groups/index.html.erb</p>
+<h1 class="text-3xl text-center">Groups pes by <b><%= @current_user.email %></b></h1>
+<% if @groups.empty? %>
+  <h2 class="text-center">There is no groups for now</h2>
+<% end %>
+<div class="w-10/12 mx-auto">
+    <ul>
+        <% @groups.each do |group| %>
+          <li class="my-6">
+            <%= render 'shared/recipe_card', group: group %>
+          </li>
+        <% end %>
+    </ul>
 </div>
