--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <main class="min-h-screen w-screen">
+    <main class="w-screen min-h-screen bg-project-text/5">
       <%= render "shared/nav_menu_header", title: @title, home: @home, msg: @msg || '' %>
       <%= yield %>
     </main>
