--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,23 @@
-<div>
-  <h1 class="font-bold text-4xl">Groups#show</h1>
-  <p>Find me in app/views/groups/show.html.erb</p>
+<%= render "shared/nav_menu_header", title: @title, home: @home, msg: @msg || '' %>
+<%=  render "shared/group_card", group: @group %>
+
+<hr class="my-4 max-w-2xl mx-auto"/>
+
+<h4 class="text-center text-2xl">Expenses:</h4>
+
+<hr class="my-4 max-w-2xl mx-auto"/>
+
+<% @spendings.each do |spending| %>
+  <%= render spending %>
+<% end %>
+
+<div class="flex flex-col items-center my-4">
+  <div>
+    <%= link_to "Edit this Categories", edit_group_path(@group) %> |
+    <%= link_to "Back to Categories", groups_path %>
+  </div>
+
+
+  <%= button_to "Destroy this Category", @group, method: :delete %>
+  <%# <%= link_to "Add a new expense", new_spending_path %>
 </div>
