--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,15 @@
-<div>
-  <h1 class="font-bold text-4xl">Groups#new</h1>
-  <p>Find me in app/views/groups/new.html.erb</p>
+<div class="flex flex-col justify-center w-full max-w-3xl gap-6 mx-auto align-center">
+  <h1 class="text-3xl text-center">Add New Category by <b><%= @current_user.name %></b></h1>
+  <% if @group.errors.any? %>
+    <div class="post-errors-box">
+      <p><%= pluralize(@group.errors.count, "error") %> found:</p>
+
+      <ul class="post-errors-ul">
+        <% @group.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <%= render "form", group: @group %>
 </div>
