--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,8 @@
+<%= render "shared/nav_menu_header", title: @title, home: @home, msg: @msg || '' %>
 <div class="flex flex-col justify-center w-full max-w-3xl gap-6 mx-auto align-center">
-  <h1 class="text-3xl text-center">Add New Category by <b><%= @current_user.name %></b></h1>
+  <h1 class="hidden lg:block text-3xl text-center text-project-text">
+    New Category by <b><%= @current_user.name %></b>
+  </h1>
   <% if @group.errors.any? %>
     <div class="post-errors-box">
       <p><%= pluralize(@group.errors.count, "error") %> found:</p>
