--- a/app/views/shared/_group_card.html.erb
+++ b/app/views/shared/_group_card.html.erb
@@ -1,7 +1,11 @@
-<div class="w-[95%] shadow-sm shadow-project-text text-project-text sm:w-11/12 flex-col sm:flex-row flex justify-between max-w-xl gap-5 px-3 py-3 mx-auto bg-white hover:bg-gray-200 border-project-text border-1">
+<div class="w-[95%] shadow-sm shadow-project-text text-project-text sm:w-11/12 flex-col sm:flex-row flex justify-between max-w-xl gap-5 px-3 py-3 mx-auto bg-white hover:bg-gray-200 border-project-text border-1 rounded-md">
   <img src="<%= group.icon %>" alt="placeholder" class="h-auto w-26"/>
   <div class="flex flex-col justify-between w-full">
-    <%= link_to group.name , group_path(group.id), class: "font-bold mt-2 w-fit" %>
+    <% if @title === 'Categories' %>
+      <%= link_to group.name , group_path(group.id), class: "font-bold mt-2 w-fit" %>
+    <% else %>
+      <p class="font-bold mt-2 w-fit"><%= group.name %></p>
+    <% end %>
     <p class="text-xs"><%= group.updated_at.to_date %></p>
   </div>
     <div class="flex flex-col justify-center">
