--- a/app/views/shared/_nav_menu_header.html.erb
+++ b/app/views/shared/_nav_menu_header.html.erb
@@ -1,25 +1,24 @@
 <header class="w-full">
 	<nav class="relative flex items-center justify-between px-4 py-4 text-white bg-project-blue" aria-label="Mobile Menu" >
 		<div class="lg:hidden">
-      <% if home %>
+      <% if home === 'BURGER' %>
         <button class="flex items-center p-1 text-white navbar-burger">
           <svg class="block w-6 h-6 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <title>Mobile menu</title>
             <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
           </svg>
         </button>
-      <% else %>
-        <% if msg === 'Login' || msg === 'Register' %>
-          <a class="text-3xl font-bold leading-none" href="/">
-            <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g> </svg>
-          </a>
-        <% else %>
-          <a class="text-3xl font-bold leading-none" href="/home">
-            <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g> </svg>
-          </a>
+      <% elsif home === 'BACK' %>
+        <%= link_to :back do%>
+          <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g>
+          </svg>
         <% end %>
+      <% else %>
+        <a class="text-3xl font-bold leading-none" href="/">
+          <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g> </svg>
+        </a>
       <% end %>
 		</div>
     <p class="font-bold lg:hidden "><%= title %></p>
