--- a/app/views/shared/_nav_menu_header.html.erb
+++ b/app/views/shared/_nav_menu_header.html.erb
@@ -46,19 +46,19 @@
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
 				</svg>
 			</li>
-			<li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Services</a></li>
+			<li><%= link_to "New Category", new_group_path , class: 'text-white hover:font-bold' %></li>
 			<li class="text-gray-300">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
 				</svg>
 			</li>
-			<li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Pricing</a></li>
+			<li><%= link_to "Transactions", spendings_path , class: 'text-white hover:font-bold' %></li>
 			<li class="text-gray-300">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
 				</svg>
 			</li>
-			<li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Contact</a></li>
+			<li><%= link_to "Add transaction", new_spending_path , class: 'text-white hover:font-bold' %></li>
 		</ul>
     <% if user_signed_in? %>
       <%= button_to 'Sign out', destroy_user_session_path, form_class: 'hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200', method: :delete %>
@@ -84,13 +84,13 @@
             <%= link_to "Home", groups_path , class: 'block p-4 text-sm font-semibold text-gray-400 rounded hover:bg-blue-50 hover:text-project-blue' %>
 					</li>
 					<li class="mb-1">
-						<a class="block p-4 text-sm font-semibold text-gray-400 rounded hover:bg-blue-50 hover:text-blue-600" href="#">Services</a>
+            <%= link_to "New Category", new_group_path , class: 'block p-4 text-sm font-semibold text-gray-400 rounded hover:bg-blue-50 hover:text-project-blue' %>
 					</li>
 					<li class="mb-1">
-						<a class="block p-4 text-sm font-semibold text-gray-400 rounded hover:bg-blue-50 hover:text-blue-600" href="#">Pricing</a>
+						<%= link_to "Transactions", spendings_path , class: 'block p-4 text-sm font-semibold text-gray-400 rounded hover:bg-blue-50 hover:text-project-blue' %>
 					</li>
 					<li class="mb-1">
-						<a class="block p-4 text-sm font-semibold text-gray-400 rounded hover:bg-blue-50 hover:text-blue-600" href="#">Contact</a>
+						<%= link_to "New Transaction", new_spending_path , class: 'block p-4 text-sm font-semibold text-gray-400 rounded hover:bg-blue-50 hover:text-project-blue' %>
 					</li>
 				</ul>
 			</div>
