--- a/app/views/spendings/_spending.html.erb
+++ b/app/views/spendings/_spending.html.erb
@@ -1,17 +1,28 @@
-<div id="<%= dom_id spending %>" class="w-[95%] shadow-sm shadow-project-text text-project-text sm:w-11/12 flex-col sm:flex-row flex justify-between max-w-2xl gap-5 px-3 py-3 mx-auto bg-white hover:bg-gray-200">
+<div id="<%= dom_id spending %>" class="w-[95%] shadow-sm shadow-project-text text-project-text sm:w-11/12 flex-col max-w-2xl gap-5 px-3 py-3 mx-auto bg-white hover:bg-gray-200">
+<div class="flex flex-col xs:flex-row xs:gap-6 justify-between px-4">
   <p>
     <strong>Name:</strong>
     <%= spending.name %>
   </p>
 
   <p>
+    <strong>Amount:</strong>
+    $<%= spending.amount %>
+
+  </p>
+</div>
+<div class="flex flex-col xs:flex-row text-xs xs:gap-6 px-4">
+  <p>
     <strong>Author:</strong>
     <%= spending.author.name %>
   </p>
 
   <p>
-    <strong>Amount:</strong>
-    $<%= spending.amount %>
+    <strong>Date:</strong>
+    <%= spending.created_at %>
   </p>
+</div>
+
+
 
 </div>
