--- a/app/views/shared/_nav_menu_header.html.erb
+++ b/app/views/shared/_nav_menu_header.html.erb
@@ -111,7 +111,7 @@
 	</div>
 </header>
 <div class="w-full">
-  <p class="mb-2 text-center notice text-project-text"><%= notice %></p>
-  <p class="mb-2 text-center text-red-600 alert"><%= alert %></p>
+  <p class="text-center notice text-project-text"><%= notice %></p>
+  <p class="text-center text-red-600 alert"><%= alert %></p>
 <div>
 
