--- a/app/views/spendings/index.html.erb
+++ b/app/views/spendings/index.html.erb
@@ -1,4 +1,18 @@
-<div>
-  <h1 class="font-bold text-4xl">Spendings#index</h1>
-  <p>Find me in app/views/spendings/index.html.erb</p>
+<%= render "shared/nav_menu_header", title: @title, home: @home, msg: @msg || '' %>
+  <h1 class="hidden lg:block text-3xl text-center text-project-text">
+    Categories by <b><%= @current_user.name %></b>
+  </h1>
+<% if @spendings.empty? %>
+  <h2 class="text-center text-project-text">There is no transactions for now</h2>
+<% end %>
+<%=  render "shared/transaction_header" %>
+<hr class="my-4 max-w-2xl mx-auto"/>
+<div class="w-full flex flex-col gap-4">
+  <% @spendings.each do |spending| %>
+    <%= render spending %>
+  <% end %>
+</div>
+
+<div class="w-full flex mx-auto my-3 text-white max-w-xl bg-project-green px-6 py-4">
+  <%= link_to "New transaction", new_spending_path, class: ' text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
 </div>
