Implement show spending page

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -7,7 +7,7 @@
       <%= f.text_field :icon, autofocus: true, autocomplete: "text", placeholder: "Icon URL", class: "w-full" %>
     </div>
     <div class="justify-center w-full max-w-lg flex mt-4">
-      <%= f.submit class: "text-project-text actions cursor-pointer" %>
+      <%= f.submit "Save", class: "text-project-text actions cursor-pointer" %>
     </div>
   </div>
 <% end %>
