--- a/app/views/spendings/_form.html.erb
+++ b/app/views/spendings/_form.html.erb
@@ -1,21 +1,25 @@
-<% if group.errors.any? %>
+
+<% if spending.errors.any? %>
   <div class="post-errors-box">
-    <p><%= pluralize(@group.errors.count, "error") %> found:</p>
+    <p><%= pluralize(spending.errors.count, "error") %> found:</p>
 
     <ul class="post-errors-ul">
-      <% group.errors.full_messages.each do |message| %>
+      <% spending.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
   </div>
 <% end %>
-<%= form_with model: group, class: 'flex flex-col w-full max-w-3xl mx-auto gap-6 justify-center items-center' do |f| %>
+<%= form_with model: spending, class: 'flex flex-col w-full max-w-3xl mx-auto gap-6 justify-center items-center' do |f| %>
   <div class= 'w-full max-w-lg mx-auto mt-6 mb-4'>
     <div class="w-full max-w-lg mx-auto">
       <%= f.text_field :name, autofocus: true, autocomplete: "text", placeholder: "Name", class: "w-full" %>
     </div>
     <div class="w-full max-w-lg mx-auto">
-      <%= f.text_field :icon, autofocus: true, autocomplete: "text", placeholder: "Icon URL", class: "w-full" %>
+      <%= f.text_field :amount, autofocus: true, autocomplete: "text", placeholder: "Amount", class: "w-full" %>
+    </div>
+    <div class="grid w-full max-w-lg grid-cols-6 gap-4 mx-auto my-3">
+      <%= f.collection_check_boxes :group_ids, @groups, :id, :name, { }, { multiple: true}%>
     </div>
     <div class="flex justify-center w-full max-w-lg mt-4">
       <%= f.submit "Save", class: "text-project-text actions cursor-pointer" %>
