--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,14 +1,14 @@
 <%= render "shared/nav_menu_header", title: @title, home: @home, msg: @msg || '' %>
-  <h1 class="hidden lg:block text-3xl text-center text-project-text mb-4">
+  <h1 class="hidden mb-4 text-3xl text-center lg:block text-project-text">
     Transactions
   </h1>
 <%=  render "shared/transaction_categories_header", group: @group %>
 
-<hr class="my-4 max-w-2xl mx-auto"/>
+<hr class="max-w-2xl mx-auto my-4"/>
 
-<h4 class="text-center text-2xl text-project-text">Expenses:</h4>
+<h4 class="text-2xl text-center text-project-text">Expenses:</h4>
 
-<hr class="my-4 max-w-2xl mx-auto"/>
+<hr class="max-w-2xl mx-auto my-4"/>
 
 <% @spendings.each do |spending| %>
   <%= render spending %>
@@ -21,6 +21,6 @@
   <%= button_to "Destroy this Category", @group, method: :delete, form_class: 'hover:font-bold' %>
 </div>
 
-<div class="w-full flex mx-auto my-3 text-white max-w-xl bg-project-green px-6 py-4">
+<div class="flex w-full max-w-xl px-6 py-4 mx-auto my-3 text-white bg-project-green">
   <%= link_to "New transaction", new_spending_path, class: ' text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
 </div>
