--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,10 @@
 <div class="w-full">
+
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "shared/nav_menu_header", title: 'REGISTER', home: false, msg: 'Register', form: f  %>
+      <h1 class="hidden text-3xl text-center lg:block text-project-text">
+        Register
+      </h1>
     <div class= 'w-full max-w-lg mx-auto mt-6 mb-4'>
       <div class="w-full max-w-lg mx-auto">
         <%= f.text_field :name, autofocus: true, autocomplete: "text", placeholder: "Full name", class: "w-full" %>
@@ -15,7 +19,9 @@
       <div class="w-full max-w-lg mx-auto">
         <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm password", class: "w-full"  %>
       </div>
-
+      <div class="hidden w-full max-w-xl px-6 py-4 mx-auto my-3 text-white lg:flex bg-project-green">
+        <%= f.submit "Register",class: 'text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
+      </div>
     </div>
   <% end %>
 
