--- a/app/views/shared/_nav_menu_header.html.erb
+++ b/app/views/shared/_nav_menu_header.html.erb
@@ -8,12 +8,6 @@
             <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
           </svg>
         </button>
-      <% elsif home === 'BACK' %>
-        <%= link_to :back do%>
-          <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g>
-          </svg>
-        <% end %>
       <% else %>
         <a class="text-3xl font-bold leading-none" href="/">
           <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -21,11 +15,11 @@
         </a>
       <% end %>
 		</div>
-    <p class="font-bold lg:hidden "><%= title %></p>
+    <p class="font-bold text-center lg:hidden"><%= title %></p>
 		<div class="flex items-center p-1 text-white lg:hidden">
       <% if msg === 'Login' %>
         <%= form.submit "Log in", class: "text-white actions cursor-pointer" %>
-      <% elsif msg === 'Register' %>
+      <% elsif msg === 'Register' || msg === 'Next'%>
         <%= form.submit "Next", class: "text-white actions cursor-pointer" %>
       <% elsif msg === 'Search' %>
         <button class="flex items-center p-1 text-white cursor-pointer">
@@ -38,9 +32,14 @@
         </button>
       <% end %>
 		</div>
+      <% if home === 'BACK' %>
+        <a class="text-3xl font-bold leading-none" href="/home">
+          <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g> </svg>
+        </a>
+      <% end %>
 		<ul class="absolute hidden transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 lg:flex lg:mx-auto lg:items-center lg:w-auto lg:space-x-6">
 			<li><%= link_to "Home", groups_path , class: 'text-white hover:font-bold' %></li>
-
 			<li class="text-gray-300">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
@@ -71,7 +70,6 @@
 		<div class="fixed inset-0 bg-gray-800 opacity-25 navbar-backdrop"></div>
 		<nav class="fixed top-0 bottom-0 left-0 flex flex-col w-5/6 max-w-xs px-6 py-6 overflow-y-auto bg-white border-r" aria-label="Desktop Menu">
 			<div class="flex items-center mb-8">
-
 				<button class="navbar-close">
 					<svg class="w-6 h-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
