--- a/app/views/shared/_nav_menu_header.html.erb
+++ b/app/views/shared/_nav_menu_header.html.erb
@@ -8,6 +8,11 @@
             <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
           </svg>
         </button>
+      <% elsif home === 'BACK'%>
+        <a class="text-3xl font-bold leading-none" href="/home">
+          <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g> </svg>
+        </a>
       <% else %>
         <a class="text-3xl font-bold leading-none" href="/">
           <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -19,7 +24,7 @@
 		<div class="flex items-center p-1 text-white lg:hidden">
       <% if msg === 'Login' %>
         <%= form.submit "Log in", class: "text-white actions cursor-pointer" %>
-      <% elsif msg === 'Register' || msg === 'Next'%>
+      <% elsif msg === 'Register' || msg === 'Next' %>
         <%= form.submit "Next", class: "text-white actions cursor-pointer" %>
       <% elsif msg === 'Search' %>
         <button class="flex items-center p-1 text-white cursor-pointer">
@@ -33,7 +38,7 @@
       <% end %>
 		</div>
       <% if home === 'BACK' %>
-        <a class="text-3xl font-bold leading-none" href="/home">
+        <a class="hidden lg:inline-block text-3xl font-bold leading-none" href="/home">
           <svg class="block w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path fill="none" d="M0 0h24v24H0z"/> <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"/> </g> </svg>
         </a>
