--- a/app/views/spendings/_form.html.erb
+++ b/app/views/spendings/_form.html.erb
@@ -18,7 +18,7 @@
     <div class="w-full max-w-lg mx-auto">
       <%= f.text_field :amount, autofocus: true, autocomplete: "text", placeholder: "Amount", class: "w-full" %>
     </div>
-    <div class="grid w-full max-w-lg grid-cols-6 gap-4 mx-auto my-3">
+    <div class="grid w-10/12 max-w-lg grid-cols-4 md:grid-cols-6 gap-4 mx-auto my-3">
       <%= f.collection_check_boxes :group_ids, @groups, :id, :name, { }, { multiple: true}%>
     </div>
     <div class="flex justify-center w-full max-w-lg mt-4">
