--- a/app/views/spendings/index.html.erb
+++ b/app/views/spendings/index.html.erb
@@ -16,5 +16,5 @@
 </div>
 
 <div class="flex w-full max-w-xl px-6 py-4 mx-auto my-3 text-white bg-project-green">
-  <%= link_to "New transaction", new_spending_path, class: ' text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
+  <%= link_to "Add New Transaction", new_spending_path, class: ' text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
 </div>
