--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,18 +6,23 @@
         Register
       </h1>
     <div class= 'w-full max-w-lg mx-auto mt-6 mb-4'>
-      <div class="w-full max-w-lg mx-auto">
-        <%= f.text_field :name, autofocus: true, autocomplete: "text", placeholder: "Full name", class: "w-full" %>
+      <div class="field w-full max-w-lg relative h-[70px] mt-5 px-4 border-t-2 border-gray-300 py-2 bg-white">
+        <%= f.file_field :photo, autofocus: true, class: "w-full mt-5 h-[50px] absolute top-0 left-0 opacity-0" %>
+        <i class="fa-solid fa-circle-user text-5xl text-gray-400"></i>
+        <span class="text-xl text-gray-400 -mt-[40px] ml-[17%] block">Upload picture</span>
       </div>
       <div class="w-full max-w-lg mx-auto">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "w-full" %>
+        <%= f.text_field :name, autofocus: true, autocomplete: "text", placeholder: "Full name", class: "w-full bg-white border-gray-300 border-t-2" %>
       </div>
       <div class="w-full max-w-lg mx-auto">
-        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "w-full"  %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "w-full bg-white border-gray-300 border-t-2" %>
+      </div>
+      <div class="w-full max-w-lg mx-auto">
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "w-full bg-white border-gray-300 border-t-2"  %>
       </div>
 
       <div class="w-full max-w-lg mx-auto">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm password", class: "w-full"  %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm password", class: "w-full bg-white border-gray-300 border-2"  %>
       </div>
       <div class="hidden w-full max-w-xl px-6 py-4 mx-auto my-3 text-white lg:flex bg-project-green">
         <%= f.submit "Register",class: 'text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
