--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,7 +13,7 @@
       </li>
     <% end %>
   </ul>
-  <div class="w-full flex mx-auto my-3 text-white max-w-xl bg-project-green px-6 py-4">
+  <div class="w-full flex mx-auto text-white max-w-3xl bg-project-green px-6 py-4">
     <%= link_to "Add New Category", new_group_path, class: ' text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
   </div>
 </div>
