--- a/app/views/spendings/index.html.erb
+++ b/app/views/spendings/index.html.erb
@@ -15,6 +15,6 @@
   <% end %>
 </div>
 
-<div class="flex w-full max-w-xl px-6 py-4 mx-auto my-3 text-white bg-project-green">
+<div class="w-full flex mx-auto text-white max-w-3xl bg-project-green px-6 py-4">
   <%= link_to "Add New Transaction", new_spending_path, class: ' text-center w-full shadow-sm shadow-project-text bg-project-green border-2 border-white rounded hover:font-bold py-3' %>
 </div>
