Fix image size for detail category page

--- a/app/views/shared/_nav_menu_header.html.erb
+++ b/app/views/shared/_nav_menu_header.html.erb
@@ -116,5 +116,5 @@
 <div class="w-full">
   <p class="text-center notice text-project-text"><%= notice %></p>
   <p class="text-center text-red-600 alert"><%= alert %></p>
-<div>
+</div>
 
